--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   auto_size_text: ^3.0.0
   sticky_headers: ^0.3.0+2
+  number_pagination: ^1.0.3
 
 dev_dependencies:
   flutter_test:
